[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=7.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlbench"
description = "A small framework for benchmarking machine learning models."
keywords = ["Benchmarking", "Machine Learning"]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "appliedAI Initiative", email = "info+oss@appliedai.de" }]
maintainers = [
    { name = "Nicholas Junge", email = "n.junge@appliedai-institute.de" },
    { name = "Max Mynter", email = "m.mynter@appliedai-institute.de" },
    { name = "Adrian Rumpold", email = "a.rumpold@appliedai-institute.de" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Benchmark",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = []

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/aai-institute/mlbench"
Repository = "https://github.com/aai-institute/mlbench.git"
Issues = "https://github.com/aai-institute/mlbench/issues"
Discussions = "https://github.com/aai-institute/mlbench/discussions"

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "pre-commit>=3.3.3",
    "pytest>=7.4.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mlbench = ["py.typed"]

# Automatically determine version number from Git tags
[tool.setuptools_scm]

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
pretty = true
python_version = "3.11"
strict_optional = false
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.ruff]
# explicitly set src folder for isort to understand first-party imports correctly.
src = ["src"]
line-length = 100
# Enable pycodestyle errors & warnings (`E`, `W`), Pyflakes (`F`), and isort (`I`) by default.
select = ["E", "F", "I", "W"]
ignore = [
    # Line too long
    "E501",
    # Allow capitalized variable names
    "F841",
]

[tool.ruff.per-file-ignores]
# Ignore unused imports in all `__init__.py` files
"__init__.py" = ["F401"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
