[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "nnbench-prefect-example"
requires-python = ">= 3.10"
version = "0.1.0"
description = "Integration example of Prefect with nnbench."
readme = "docs/guides/prefect.md"
license = { text = "Apache-2.0" }
dependencies = [
    "prefect",
    "numpy",
    "scikit-learn",
    "nnbench@git+https://github.com/aai-institute/nnbench.git"
]
maintainers = [{name="Max Mynter", email="m.mynter@appliedai-institute.de"}]
authors = [{ name = "appliedAI Initiative", email = "info+oss@appliedai.de" }]
