[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "nnbench-streamlit-example"
requires-python = ">= 3.8"
version = "0.1.0"
description = "Integration example of Streamlit with Prefect and nnbench."
readme = "docs/guides/streamlit.md"
license = { text = "Apache-2.0" }
dependencies = [
    "prefect==2.14.*",
    "numpy==1.23.*",
    "scikit-learn==1.4.*",
    "streamlit==1.28.*",
    "nnbench@git+https://github.com/aai-institute/nnbench.git"
]
maintainers = [{name="Max Mynter", email="m.mynter@appliedai-institute.de"}]
authors = [{ name = "appliedAI Initiative", email = "info+oss@appliedai.de" }]
